--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper">
-      <a href="home.html" class="brand-logo">nerd book</a>
+      <a href="home.html" class="brand-logo">nerd_book</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="login.html">Log In</a></li>
@@ -31,39 +31,48 @@
     <li><a href="signup.html">Sign Up</a></li>
   </ul>
 
-  <div class="container">
-    <div class="row">
-      <!-- Page header -->
 
-      <div class="row">
+      <!-- Parallax attempt -->
+      <div class="parallax-container">
+        <div class="parallax"><img src="assets/team1.jpg"></div>
+      </div>
+      <div class="section white">
         <div id="jumbotron" class="col s12 m12">
             <div class="row">
-                <h3 class="jumboHeader">Where <span class="italics">greatness</span> happens</h3>
+                <h3 class="jumboHeader">where <span class="italics">greatness</span> happens</h3>
                 <!-- <h3 class="jumboHeader">Welcome<span id="guest"></span></h3> -->
             </div>
             <div class="divider"></div>
             <div class="jumboContent">
                 <p class="jumboText">
-                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                    We are a passionate crew here at <span class="italics brandColor">nerd_book</span>.  Our mission is bringing teams together with ingenuity, innovation and imagination.                
                 </p>
                 <a href="members.html" class="waves-effect waves-light btn-large">Meet The Team!</a>
             </div>
         </div>
       </div>
-
-      <div class="row">
-        <div id="" class="col s12 m6">
-            <div class="jumboContent">
-                <p class="">
-                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
-                    We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
-                </p>
-            </div>
-        </div>
+      <div class="parallax-container">
+        <div class="parallax"><img src="assets/team2.jpg"></div>
       </div>
 
-    </div>
-  </div>
+      <div class="section white">
+        <div class="row">
+            <div id="" class="col s12 m6">
+                <div class="jumboContent">
+                    <p class="">
+                        We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                    </p>
+                </div>
+            </div>
+            <div id="" class="col s12 m6">
+                <div class="jumboContent">
+                    <p class="">
+                        We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.We are a passionate group, yadda yadda yadda, lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor neque arcu, rutrum mollis velit tristique sit amet. Nullam nibh mauris, facilisis rhoncus convallis sit amet, gravida eu est.
+                    </p>
+                </div>
+            </div>        
+        </div>
+      </div>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -80,6 +89,11 @@
     $(document).ready(function(){
       $('.sidenav').sidenav();
     });
+
+    // Parallax
+    $(document).ready(function(){
+    $('.parallax').parallax();
+  });
   </script>
 
 </body>
