--- a/public/members.html
+++ b/public/members.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-wrapper">
-      <a href="home.html" class="brand-logo">nerd book</a>
+      <a href="home.html" class="brand-logo">nerd_book</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">reorder</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/logout">Log Out</a></li>
@@ -46,7 +46,7 @@
             <div id="div2" class="card">
               <div id="imgdiv" class="card-image">
 
-                <img id="img1" src="placeholder.jpg">
+                <img id="img1" src="assets/placeholder.jpg">
                 <a id="fab" class="btn-floating halfway-fab waves-effect waves-light modal-trigger" href="#m1">
                   <i class="material-icons">style</i></a>
               </div>
@@ -71,7 +71,7 @@
           <div id="mcontent" class="modal-content">
             <div id="mrow" class="row">
               <div id="mcol" class="col s11">
-                <h5 id="mheader">yourNameHere</h5>
+                <h5 id="mheader">Maya Angelou</h5>
                 <p id="mgithub">@githubusername</p>
               </div>
               <div id="mcol" class="col s1">
@@ -81,14 +81,9 @@
             <div id="mdivider" class="divider"></div>
             <div id="mrow2" class="row">
               <div id="mcol2" class="col s12">
-                <p id="mheader2" class="topRepo">About me</p>
-                <p id="email">Email@email.com</p>
-<<<<<<< HEAD
-                <p id="location">Location for my stalkers</p>
-                <p id="repoCount">Repo count</p>
-=======
-                <p id="location">Location for stalkers</p>
->>>>>>> b05331d373f4f492623c4ec04c115642b7d059db
+                <p id="mheader2" class="topRepo"></p>
+                <p id="email">---</p>
+                <p id="location">---</p>
               </div>
             </div>
           </div>
