--- a/public/home.html
+++ b/public/home.html
@@ -32,7 +32,7 @@
   </ul>
 
 
-      <!-- Parallax attempt -->
+      <!-- Parallax -->
       <div class="parallax-container">
         <div class="parallax"><img src="assets/team2C.png"></div>
       </div>
@@ -47,7 +47,10 @@
                 <div class="container">
                     <div class="jumboContent">
                         <p class="jumboText">
-                            We are a passionate crew here at <span class="italics brandColor">nerd_book</span>.  Our mission is bringing teams together with ingenuity, innovation and imagination.                
+                            We are a passionate crew here at <span class="italics brandColor">nerd_book</span>.  Our mission is bringing teams together with ingenuity, innovation and imagination.                  
+                        </p>
+                        <p class="jumboText">
+                            We’re hungry for solutions, not problems. We’re humble but confident, and we live life with an extra gear. That’s why we’ve fostered a work environment that promotes creativity, makes room for personal growth, and encourages discussion and active problem-solving.                
                         </p>
                         <a href="members.html" class="waves-effect waves-light btn-large">Meet The Team</a>
                     </div>
@@ -62,20 +65,23 @@
 
       <div class="section white">
         <div class="row">
-            <div id="" class="col s12 m6">
-                <div class="jumboContent">
-                    <p class="">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at elementum ligula, eget laoreet augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam facilisis sem suscipit tellus semper, sed auctor massa sodales. Maecenas et arcu quis lorem porttitor pellentesque. Aenean dictum consectetur augue, a egestas nunc blandit id. Integer vel dui suscipit, pellentesque urna at, aliquam diam. Maecenas lacinia augue id elementum porttitor. Pellentesque at enim non ipsum blandit condimentum. Curabitur dictum eros non posuere aliquet. Vivamus ultrices imperdiet pharetra. Aenean lorem nisl, scelerisque id viverra non, sagittis sed metus. Cras ac quam porta, mollis ante eu, tempor nunc. Nullam porttitor diam ac dapibus auctor. Sed ac lorem faucibus, tempus nisl sed, rhoncus dolor.
-                    </p>
-                </div>
+            <div class="container">
+                <h3 class="jumboHeader">about <span class="italics">us</span></h3>
+                <!-- <h3 class="jumboHeader">Welcome<span id="guest"></span></h3> -->
             </div>
-            <div id="" class="col s12 m6">
-                <div class="jumboContent">
-                    <p class="">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at elementum ligula, eget laoreet augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam facilisis sem suscipit tellus semper, sed auctor massa sodales. Maecenas et arcu quis lorem porttitor pellentesque. Aenean dictum consectetur augue, a egestas nunc blandit id. Integer vel dui suscipit, pellentesque urna at, aliquam diam. Maecenas lacinia augue id elementum porttitor. Pellentesque at enim non ipsum blandit condimentum. Curabitur dictum eros non posuere aliquet. Vivamus ultrices imperdiet pharetra. Aenean lorem nisl, scelerisque id viverra non, sagittis sed metus. Cras ac quam porta, mollis ante eu, tempor nunc. Nullam porttitor diam ac dapibus auctor. Sed ac lorem faucibus, tempus nisl sed, rhoncus dolor.
-                    </p>
-                </div>
-            </div>        
+            <div class="divider"></div>
+            <div class="container">
+                <div id="" class="col s12 m12">
+                    <div class="jumboContent">
+                        <p class="jumboText">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at elementum ligula, eget laoreet augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam facilisis sem suscipit tellus semper, sed auctor massa sodales. Integer vel dui suscipit, pellentesque urna at, aliquam diam. Maecenas lacinia augue id elementum porttitor. Pellentesque at enim non ipsum blandit condimentum. Curabitur dictum eros non posuere aliquet. Vivamus ultrices imperdiet pharetra. Aenean lorem nisl, scelerisque id viverra non, sagittis sed metus. Cras ac quam porta, mollis . 
+                        </p>
+                        <p class="jumboText">
+                            Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas et arcu quis lorem porttitor pellentesque. Aenean dictum consectetur augue, a egestas nunc blandit id. Integer vel dui suscipit, pellentesque urna at, aliquam diam. Maecenas lacinia augue id elementum porttitor. Pellentesque at enim non ipsum blandit condimentum. Curabitur dictum eros non posuere aliquet. Vivamus ultrices imperdiet pharetra. Aenean lorem nisl, scelerisque id viverra non, sagittis sed metus. Cras ac quam porta, mollis ante eu, tempor nunc.
+                        </p>
+                    </div>
+                </div> 
+            </div>
         </div>
       </div>
 
