--- a/public/members.html
+++ b/public/members.html
@@ -33,7 +33,7 @@
     <div class="row">
       <!-- Page header -->
       <div class="row">
-        <h3>Our Team</h3>
+        <h3 class="">Our Team</h3>
       </div>
 
 
