--- a/public/login.html
+++ b/public/login.html
@@ -31,7 +31,7 @@
     <li><a href="login.html">Log Out</a></li>
   </ul> -->
 
-  <div class="container">
+  <div class="form container">
     <div class="row">
       <form class="col s6">
         <div class="row">
@@ -48,8 +48,11 @@
               <input type="password" class="validate" id="password-input">
             </div>
           </div>
-          <button class="btn waves-effect waves-light" type="submit" name="action" id="login">Submit</button>
-        </form>
+          <button class="btn-large waves-effect waves-light" type="submit" name="action" id="login">Submit</button>
+      </form>
+      <div class="col s6">
+        <!-- image? -->
+      </div>
     </div>
   </div>
 
