--- a/public/signup.html
+++ b/public/signup.html
@@ -65,7 +65,7 @@
             <label for="password">Password</label>
           </div>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action" id="signup">Submit</button>
+        <button class="btn-large waves-effect waves-light" type="submit" name="action" id="signup">Submit</button>
       </form>
     </div>
   </div>
